--- a/pomo-table.html
+++ b/pomo-table.html
@@ -24,8 +24,9 @@
         justify-content: center;
         padding-inline: 14px;
         min-height: 100vh;
-        overflow-y: hidden;
-        overflow-x: hidden;
+        overflow-x: hidden; /* no horizontal scroll */
+        overflow-y: auto; /* vertical scroll enabled */
+        -webkit-overflow-scrolling: touch;
       }
 
       .container {
@@ -183,7 +184,6 @@
         backdrop-filter: blur(20px);
         -webkit-backdrop-filter: blur(20px);
         border-radius: 12px;
-        margin-bottom: 12px;
         transition: max-height 0.5s ease, opacity 0.3s ease, padding 0.3s ease;
         overflow: hidden;
         box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
@@ -246,10 +246,9 @@
         font-weight: bold;
         padding: 5px 10px;
         font-size: 13px;
-        position: absolute;
-        bottom: 100%;
-        left: 50%;
-        transform: translateX(-50%);
+        position: fixed; /* instead of absolute */
+        bottom: auto; /* use top/left positioning */
+        left: auto;
         max-width: 250px;
         white-space: normal;
         line-height: 1.3;
@@ -312,14 +311,15 @@
       }
 
       .table-wrapper {
-        max-height: 100vh; /* adjust as needed */
+        max-height: 83vh;
         overflow-y: auto;
-        -ms-overflow-style: none; /* IE and Edge */
-        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none; /* hide scrollbar in IE/Edge */
+        scrollbar-width: none; /* hide scrollbar in Firefox */
       }
 
       .table-wrapper::-webkit-scrollbar {
-        display: none; /* Chrome, Safari, Opera */
+        width: 0px; /* hide scrollbar in Chrome/Safari/Opera */
+        background: transparent; /* optional */
       }
     </style>
   </head>
