--- a/pomo-table.html
+++ b/pomo-table.html
@@ -311,7 +311,7 @@
       }
 
       .table-wrapper {
-        max-height: 83vh;
+        max-height: 420px;
         overflow-y: auto;
         -ms-overflow-style: none; /* hide scrollbar in IE/Edge */
         scrollbar-width: none; /* hide scrollbar in Firefox */
