--- a/pomo-table.html
+++ b/pomo-table.html
@@ -88,9 +88,9 @@
 
       .calculator {
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         justify-content: space-around;
-        gap: 8px;
+        gap: 4px;
         background: rgba(14, 15, 46, 0.5);
         backdrop-filter: blur(20px);
         -webkit-backdrop-filter: blur(20px);
@@ -157,7 +157,7 @@
         border: none;
         color: white !important;
         padding: 5px 8px;
-        margin-top: 10px;
+        /* margin-top: 10px; */
         font-weight: bold;
         cursor: pointer;
         transition: all 0.25s ease;
@@ -352,7 +352,7 @@
           </div>
           <div class="field">
             <label>Focus</label
-            ><input type="number" id="focusTime" value="50" min="1" />
+            ><input type="number" id="focusTime" value="60" min="1" />
           </div>
           <div class="field">
             <label>Break</label
