--- a/pomo-table.html
+++ b/pomo-table.html
@@ -246,9 +246,10 @@
         font-weight: bold;
         padding: 5px 10px;
         font-size: 13px;
-        position: fixed; /* instead of absolute */
-        bottom: auto; /* use top/left positioning */
+        position: fixed;
+        bottom: 0;
         left: auto;
+        right: auto;
         max-width: 250px;
         white-space: normal;
         line-height: 1.3;
@@ -311,7 +312,7 @@
       }
 
       .table-wrapper {
-        max-height: 420px;
+        max-height: 800px;
         overflow-y: auto;
         -ms-overflow-style: none; /* hide scrollbar in IE/Edge */
         scrollbar-width: none; /* hide scrollbar in Firefox */
@@ -352,7 +353,7 @@
           </div>
           <div class="field">
             <label>Focus</label
-            ><input type="number" id="focusTime" value="60" min="1" />
+            ><input type="number" id="focusTime" value="30" min="1" />
           </div>
           <div class="field">
             <label>Break</label
@@ -364,7 +365,7 @@
           </div>
           <div class="field">
             <label>Every</label
-            ><input type="number" id="pomosBeforeLongBreak" value="3" min="0" />
+            ><input type="number" id="pomosBeforeLongBreak" value="5" min="0" />
           </div>
           <div class="field" style="align-items: center">
             <label>Use</label>
