--- a/pomo-table.html
+++ b/pomo-table.html
@@ -357,7 +357,7 @@
           </div>
           <div class="field">
             <label>Break</label
-            ><input type="number" id="breakTime" value="15" min="1" />
+            ><input type="number" id="breakTime" value="20" min="1" />
           </div>
           <div class="field">
             <label>Long</label
@@ -365,7 +365,7 @@
           </div>
           <div class="field">
             <label>Every</label
-            ><input type="number" id="pomosBeforeLongBreak" value="6" min="0" />
+            ><input type="number" id="pomosBeforeLongBreak" value="3" min="0" />
           </div>
           <div class="field" style="align-items: center">
             <label>Use</label>
@@ -420,7 +420,7 @@
         noCalendar: true,
         time_24hr: true,
         locale: 'pl',
-        defaultDate: '17:15',
+        defaultDate: '17:20',
       })
 
       function padZero(n) {
@@ -439,12 +439,12 @@
 
       let preventBroadcast = false
 
-      // Enable long breaks by default
+      // Disable long breaks by default
       document.addEventListener('DOMContentLoaded', () => {
         const useLongBreaks = document.getElementById('useLongBreaks')
-        useLongBreaks.checked = true
-        document.getElementById('longBreakTime').disabled = false
-        document.getElementById('pomosBeforeLongBreak').disabled = false
+        useLongBreaks.checked = false
+        document.getElementById('longBreakTime').disabled = true
+        document.getElementById('pomosBeforeLongBreak').disabled = true
         calculatePomos()
       })
 
